<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/abs2"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:text="@string/n_vel_06"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/level06"
        app:layout_constraintStart_toStartOf="@+id/level06"
        app:layout_constraintTop_toBottomOf="@+id/level06" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:text="@string/n_vel_05"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/level05"
        app:layout_constraintStart_toStartOf="@+id/level05"
        app:layout_constraintTop_toBottomOf="@+id/level05" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:text="@string/n_vel_04"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/level04"
        app:layout_constraintStart_toStartOf="@+id/level04"
        app:layout_constraintTop_toBottomOf="@+id/level04" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:text="@string/n_vel_03"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/level03"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="@+id/level03"
        app:layout_constraintTop_toBottomOf="@+id/level03" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#00000000"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_ad_unit_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/memodicebeta" />

    <ImageView
        android:id="@+id/level01"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:clickable="true"
        android:contentDescription="@string/fase_1"
        android:focusable="true"
        app:layout_constraintEnd_toStartOf="@+id/level02"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/dados01v" />

    <ImageView
        android:id="@+id/level02"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/fase_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/dados02c" />

    <ImageView
        android:id="@+id/level03"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/fase_3"
        app:layout_constraintStart_toEndOf="@+id/level02"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/dados03c" />

    <ImageView
        android:id="@+id/level04"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:contentDescription="@string/fase_4"
        app:layout_constraintEnd_toStartOf="@+id/level05"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/dados04c" />

    <ImageView
        android:id="@+id/level05"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/fase_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/dados05c" />

    <ImageView
        android:id="@+id/level06"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/fase_6"
        app:layout_constraintStart_toEndOf="@+id/level05"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:srcCompat="@drawable/dados06c" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/n_veis"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:text="@string/n_vel_01"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/level01"
        app:layout_constraintStart_toStartOf="@+id/level01"
        app:layout_constraintTop_toBottomOf="@+id/level01" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:text="@string/n_vel_02"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/level02"
        app:layout_constraintStart_toStartOf="@+id/level02"
        app:layout_constraintTop_toBottomOf="@+id/level02" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/estrela" />

    <TextView
        android:id="@+id/pontosUser01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/baloo"
        android:text="@string/_0000"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>